<resources>
    <string name="app_name">新刊検索</string>

    <string name="title_new_books">新刊</string>
    <string name="title_keywords">キーワード</string>
    <string name="title_settings">設定</string>

    <string name="dialog_title_log_out">ログアウトしますか?</string>
    <string name="dialog_title_edit">キーワード登録</string>
    <string name="dialog_title_delete">キーワードを削除しますか?</string>
    <string name="dialog_title_reload">新刊検索</string>
    <string name="dialog_title_backup">キーワードのバックアップ</string>
    <string name="dialog_title_restore">キーワードのレストア</string>


    <string name="label_positive">OK</string>
    <string name="label_negative">Cancel</string>
    <string name="label_sale">発売</string>
    <string name="label_reload">更新</string>
    <string name="label_add">追加</string>
    <string name="label_isbn">ISBN</string>
    <string name="label_link_up_dropbox">Dropbox連携</string>
    <string name="label_log_in">ログイン</string>
    <string name="label_log_out">ログアウト</string>
    <string name="label_backup">バックアップ</string>
    <string name="label_restore">リストア</string>

    <string name="message_progress_reload">更新中…</string>
    <string name="message_progress_backup">バックアップ中…</string>
    <string name="message_progress_restore">リストア中…</string>

    <string name="message_register_keyword">キーワードを登録しました</string>
    <string name="message_delete_keyword">キーワードを削除しました</string>

    <string name="message_success_backup">バックアップしました</string>
    <string name="message_success_restore">リストアしました</string>
    <string name="message_success_reload">更新完了しました</string>

    <string name="message_error_empty_keywords">キーワードが登録されていません。</string>
    <string name="message_error_canceled">キャンセルされました。</string>
    <string name="message_error_no_books">本が見つかりませんでした。</string>
    <string name="message_error_exists">そのキーワードは既に登録されています。</string>
    <string name="message_error_keyword">半角2文字または全角1文字以上。ひらがな・カタカナ・記号の場合は2文字以上</string>
    <string name="message_error_io_exception">IO Exception</string>
    <string name="message_error_dbx_exception">DBX Exception</string>

    <!-- Notification-->
    <string name="notification_channel_id">NewBookSearch</string>
    <string name="notification_channel_title">新刊検索</string>
    <string name="notification_channel_description">バックグラウンド動作中</string>
    <string name="notification_message_background_service">バックグラウンド動作中</string>









</resources>
